@@ -1,12 +1,14 @@
 package br.softsistem.Gerenciamento_de_estoque.controller;
 
-import br.softsistem.Gerenciamento_de_estoque.dto.consumidorDto.ConsumidorDto;
+import br.softsistem.Gerenciamento_de_estoque.dto.consumidorDto.ConsumidorDtoRequest;
+import br.softsistem.Gerenciamento_de_estoque.dto.consumidorDto.ConsumidorDtoResponse;
 import br.softsistem.Gerenciamento_de_estoque.model.Consumidor;
 import br.softsistem.Gerenciamento_de_estoque.repository.ConsumidorRepository;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/consumidores")
@@ -19,22 +21,27 @@ public class ConsumidorController {
     }
 
     @PostMapping
-    public ResponseEntity<ConsumidorDto> adicionarConsumidor(@RequestBody ConsumidorDto consumidorDto) {
-        // Converte DTO para Entidade e salva
-        Consumidor salvo = consumidorRepository.save(consumidorDto.toEntity());
-
-        // Retorna o DTO convertido da Entidade salva
-        return ResponseEntity.ok(ConsumidorDto.fromEntity(salvo));
+    public ResponseEntity<ConsumidorDtoResponse> criarConsumidor(@RequestBody ConsumidorDtoRequest consumidorDtoRequest) {
+        Consumidor consumidor = consumidorDtoRequest.toEntity();
+        consumidor = consumidorRepository.save(consumidor);
+        return ResponseEntity.ok(ConsumidorDtoResponse.fromEntity(consumidor));
     }
 
     @GetMapping
-    public ResponseEntity<List<ConsumidorDto>> listarConsumidores() {
-        // Busca entidades no banco e converte para lista de DTOs
-        List<ConsumidorDto> consumidoresDto = consumidorRepository.findAll()
+    public ResponseEntity<List<ConsumidorDtoResponse>> listarConsumidores() {
+        List<ConsumidorDtoResponse> consumidores = consumidorRepository.findAll()
                 .stream()
-                .map(ConsumidorDto::fromEntity)
-                .toList();
+                .map(ConsumidorDtoResponse::fromEntity)
+                .collect(Collectors.toList());
+        return ResponseEntity.ok(consumidores);
+    }
 
-        return ResponseEntity.ok(consumidoresDto);
+    @DeleteMapping("/{id}")
+    public ResponseEntity<String> deletarConsumidor(@PathVariable Long id) {
+        if (!consumidorRepository.existsById(id)) {
+            return ResponseEntity.notFound().build(); // Retorna 404 se o ID não existir
+        }
+        consumidorRepository.deleteById(id);
+        return ResponseEntity.ok("Consumidor deletado com sucesso.");
     }
 }
